# Django-CRM

./: README.md  index.py  vercel.json
backend/: pyproject.toml
backend/common/: models.py  pat_auth.py  serializer.py  urls.py
backend/common/middleware/: get_company.py
backend/common/migrations/: 0027_personalaccesstoken.py
backend/common/rls/: __init__.py
backend/common/tests/: test_notification_sse.py  test_pat_api.py  test_pat_auth.py  test_pat_integration.py  test_pat_model.py
backend/common/views/: notification_views.py  pat_views.py
backend/crm/: asgi.py  settings.py
docs/plans/: 2026-06-01-mcp-server-design.md  2026-06-01-mcp-server-phase1.md
frontend/src/lib/components/layout/: AppSidebar.svelte
frontend/src/routes/(app)/settings/api-tokens/: +page.server.js  +page.svelte
frontend/src/routes/(app)/tasks/: +page.svelte
mcp_server/: README.md  pyproject.toml
mcp_server/src/bcrm_mcp/: auth.py  client.py  config.py  entities.py  server.py  tools.py
mcp_server/tests/: test_auth.py  test_client.py  test_config.py  test_entities.py  test_resolver.py  test_server_registration.py  test_tools.py
