[project]
name = "bcrm-mcp"
version = "0.1.0"
description = "BottleCRM MCP server — connect your AI agent to BottleCRM"
requires-python = ">=3.11"
dependencies = ["fastmcp>=3.0", "httpx>=0.27", "pydantic>=2.7"]

[project.scripts]
bcrm-mcp = "bcrm_mcp.server:main"

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
